--- a/cron-app/pom.xml
+++ b/cron-app/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>com.example</groupId>
-	<artifactId>tambola</artifactId>
+	<artifactId>cron-app</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>tambola</name>
-	<description>Tambola project for Spring Boot</description>
+	<name>cron-application</name>
+	<description>Cron parser project in spring boot</description>
 	<properties>
 		<java.version>17</java.version>
 	</properties>
